# hpf_Linux_Config

./: .cursorrules  .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE  README-CN.md  README.md  init-wsl.sh  makefile  pull_nvim_config.sh  push_nvim_config.sh
.claude/: plan.md
.claude/workflows/: optimize-repo.mjs
SSOT/: README.md  STATUS.md
SSOT/.bootstrap/: manifest.md  recon.md
SSOT/architecture/: README.md
SSOT/bugs/: README.md
SSOT/decisions/: 0000-bootstrap-recon.md  README.md
SSOT/deployment/: README.md
SSOT/development/: README.md
SSOT/glossary/: README.md
SSOT/gotchas/: README.md
SSOT/identity/: README.md
SSOT/release/: README.md
SSOT/tech-debt/: README.md
SSOT/testing/: README.md
docs/: agent-install-playbook.md  nvim-plugin-modernization-research-2026-05-25.md
home/.cargo/: config.toml
install-script/: REFACTOR_PLAN.md  TEST_ENV.md  agent-runner.py  agent-tools.json  markdown.sh  todo
install-script/asynctask/: asynctask-install.sh  tasks.ini
install-script/basic/: Makefile  README-CN.md  README.md  aliases  apt-install.sh  apt-snap-install.sh  bashrc-append  bashrc-init.sh  bashrc_append  bashrcappend  basic-install.sh  build-from-source.sh  cargo-config  cargo-install.sh  cargo.sh  change_source.sh  clang13-install.sh  config-install.sh  (+24 more)
neovim/: nvim
nvim/: OPTIMIZATION_PLAN.md  README-CN.md  README.md  efm.yaml  init.lua  init.vim  lazy-lock.json  output.txt  vim-tutorial-cn.md
script/: .tmux.conf  bashrc.sh  bashrc_append  cargo.sh  change_source.sh  clipboard-provider  init-wsl.sh  lua.sh  markdown.sh  nvim-clipboard.sh  nvim_install.sh  sourcelist-for-ubuntu2004
tui-installer/: .gitignore  CHANGELOG.md  Makefile  OPTIMIZATION.md  QUICKSTART.md  README.md  pyproject.toml
tui-installer/scripts/: run.sh  test_keys.py
tui-installer/tests/: Dockerfile  __init__.py  conftest.py  docker-compose.yml  run_docker_tests.sh  test_app.py  test_config.py  test_executor.py  test_input.py  test_integration.py  test_models.py  test_system.py
tui-installer/tests/test-results/: coverage.xml  junit.xml
tui-installer/tui_installer/: __init__.py  __main__.py  app.py  config.py  constants.py  executor.py  input.py  models.py  state.py  system.py  theme.py  ui.py
tui-installer/tui_installer/data/: tools_config.json
tui_workspace/: README.md  demo.py  installer_new.py  requirements.txt  run.sh
wezterm/: README.md
(+287 files in other folders)
