[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tui-installer"
version = "2.0.0"
description = "Modern TUI installer for HPF Linux Config with Vim-style keybindings"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "HPF" },
]
keywords = ["tui", "installer", "terminal", "linux", "configuration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Installation/Setup",
    "Topic :: Terminals",
]
dependencies = [
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
tui-installer = "tui_installer.__main__:run"

[project.urls]
Homepage = "https://github.com/hpf/hpf_Linux_Config"
Repository = "https://github.com/hpf/hpf_Linux_Config"

[tool.hatch.build.targets.wheel]
packages = ["tui_installer"]

[tool.hatch.build.targets.sdist]
include = [
    "/tui_installer",
    "/tests",
    "/README.md",
    "/CHANGELOG.md",
    "/QUICKSTART.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "rich.*"
ignore_missing_imports = true

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["tui_installer"]

